--- a/templates/lista_usuarios.html
+++ b/templates/lista_usuarios.html
@@ -1,4 +1,4 @@
-{% extends "template.html" %}
+{% extends "sim_template.html" %}
 {% block conteudo %}
     <a class="btn btn-primary" href="{{ url_for('novo_usuario') }}">Cadastrar novo usuário</a>
 
