--- a/templates/sim_home.html
+++ b/templates/sim_home.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "sim_template.html" %}
+{% block conteudo %}
+<div>Sistema de Informação do Museu Virtual</div>
+{% endblock %}
