--- a/templates/novo_item.html
+++ b/templates/novo_item.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "sim_template.html" %}
+{% block conteudo %}
+    <form action="{{ url_for('criar_item') }}" method="post">
+
+        <fieldset>
+          <div class="form-group">
+            <label for="descItem">Descrição:</label>
+            <input type="text" id="descItem" name="descCategoria" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="ordem">Ordem no painel:</label>
+            <input type="text" id="ordem" name="ordem" class="form-control">
+          </div>
+
+          <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
+          <a class="btn btn-danger" href="{{ url_for('lista_categorias') }}">Voltar</a>
+        </fieldset>
+    </form>
+{% endblock %}
