--- a/templates/login.html
+++ b/templates/login.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sistema sem nome</title>
+    <title>Museu Virtual - Login</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-3.4.1-dist/css/bootstrap.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/personalizado.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/signin.css') }}">
       <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   </head>
   <body>
-  <div class="jumbotron text-center">
-			<h1>My First Bootstrap Page</h1>
-			<p>Resize this responsive page to see the effect!</p>
-		</div>
+
     <div class="container">
+        <div class="jumbotron">
+			<h1>Museu Virtual</h1>
+			<p>descricao / logomarca</p>
+		</div>
         <div class="panel panel-default">
     <div class="panel-body">
         {% with messages = get_flashed_messages() %}
@@ -27,7 +28,8 @@
             {% endif %}
         {% endwith %}
         <form method="POST" class="form-signin" action="{{ url_for('autenticar') }}">
-            <h1 class="form-signin-heading">Faça seu login</h1>
+            <h5 class="form-signin-heading"> Faça seu login para acessar o Sistema de Informação do Museu</h5>
+            <h2 class="form-signin-heading">Faça seu login</h2>
             <input type="hidden" name="proxima" value="{{ proxima or url_for('index') }}">
             <p><label>Nome de usuário:</label> <input class="form-control" type="text" name="usuario" required></p>
             <p><label>Senha:</label> <input class="form-control" type="password" name="senha" required></p>
@@ -36,7 +38,7 @@
     </div>
     <div class="panel-footer text-center">
         Centro Federal de Educação Tecnológica de Minas Gerais Campus Nepomuceno.<br>
-        Copyright &copy; 2021. Todos os direitos reservados. <a href="#"> Créditos</a>.
+        Copyright &copy; 2021. Todos os direitos reservados. <a href="{{ url_for('creditos') }}"> Créditos</a>.
     </div>
   </div>
     </div>
